# brain

./: .gitignore  ARCHITECTURE.md  README.md  app.py  main copy.py  main.py  pyproject.toml
src/cli/: brain.py  expand.py
src/memory/arxiv/: memory.jsonl
