[project]
name = "kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "raganything[image,text]>=1.3.1",
    "rlms>=0.1.2",
    "scikit-learn>=1.9.0",
]
