[project]
name = "brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "docling>=2.110.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.10",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "mcp>=1.28.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "polars>=1.41.2",
    "raganything[image,text]>=1.3.1",
    "requests>=2.34.2",
    "rlms>=0.1.2",
    "scikit-learn>=1.9.0",
    "textual>=8.2.7",
]

[project.scripts]
expand = "brain.cli.expand:main"
